# betting

./: README.md  pyproject.toml
examples/offline/: closing_odds.sample.json  fixtures.sample.json  missing_players.json  odds.json  results.sample.json  team_matches.json
scripts/: calibrate_markets.py  report_performance.py  run_predictions.py  settle_picks.py  update_closing_lines.py
value_engine/: __init__.py  engine_safe.py  engine_value.py  settings.py  team_aliases.py
value_engine/calibration/: calibrator.py
value_engine/data/: api_football.py  leagues.py
value_engine/markets/: mapper.py
value_engine/model/: model.py  player_impact.py  poisson.py  team_stats.py
value_engine/roi/: tracker.py
